plugins {
    id 'java'
    id 'java-library'
    id 'io.freefair.lombok' version '8.13.1'
}

group = 'exchange.core2'
version = '0.5.4-SNAPSHOT'
description = 'High performance market exchange core'

sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

repositories {
    mavenCentral()
}

dependencies {
    // Основные зависимости
    implementation 'net.java.dev.jna:jna-platform:5.11.0'
    implementation 'net.java.dev.jna:jna:5.11.0'
    implementation 'exchange.core2:collections:0.5.1'
    implementation 'com.lmax:disruptor:3.4.4'
    implementation 'org.slf4j:slf4j-api:2.0.17'
    implementation 'net.openhft:affinity:3.27ea0'
    implementation 'net.openhft:chronicle-wire:2.27ea5'
    implementation 'org.agrona:agrona:1.15.1'
    implementation 'org.eclipse.collections:eclipse-collections-api:11.1.0'
    implementation 'org.eclipse.collections:eclipse-collections:11.1.0'
    implementation 'org.lz4:lz4-java:1.8.0'
    compileOnly 'org.jetbrains:annotations:24.0.1'


    // Тестовые зависимости
    testImplementation 'com.paritytrading.juncture:juncture-nasdaq:1.0.0'
    testImplementation 'com.paritytrading.nassau:nassau-util:1.0.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.5.1'
    testImplementation 'org.hdrhistogram:HdrHistogram:2.1.12'
    testImplementation 'ch.qos.logback:logback-classic:1.5.18'
    testImplementation 'com.google.guava:guava:33.4.8-jre'
    testImplementation 'org.apache.commons:commons-lang3:3.17.0'
    testImplementation 'org.apache.commons:commons-math3:3.6.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.13.0'
    testImplementation 'org.mockito:mockito-core:5.18.0'
    testImplementation 'org.hamcrest:hamcrest-library:3.0'
    testImplementation 'io.cucumber:cucumber-java8:7.23.0'
    //testImplementation("io.cucumber:cucumber-java:7.23.0")
    testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.23.0'
    testImplementation 'org.junit.platform:junit-platform-suite:1.13.0'
    testImplementation 'io.cucumber:cucumber-picocontainer:7.23.0'
    testCompileOnly 'org.jetbrains:annotations:24.0.1' // Для тестов
}

java {
    withSourcesJar()
//    withJavadocJar()
}

test {
    useJUnitPlatform()
    exclude '**/remote/**'
    exclude '**/stress/**'
    exclude '**/*Remote*Test*'
    exclude '**/*Stress*Test*'
    maxParallelForks = 1

    jvmArgs = [
            "--add-opens=java.base/java.lang=ALL-UNNAMED",
            "--add-opens=java.base/java.nio=ALL-UNNAMED",
            "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
            "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
            "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
            "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED",
            "--add-opens=java.base/java.lang=ALL-UNNAMED",
            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
            "--add-opens=java.base/java.io=ALL-UNNAMED",
            "--add-opens=java.base/java.util=ALL-UNNAMED"
    ]
}

task integrationTest(type: Test) {
    useJUnitPlatform()
    include '**/IT*.java'
    include '**/*IntegrationTest.java'
    shouldRunAfter test
    maxParallelForks = 1
    jvmArgs = [
            "--add-opens=java.base/java.lang=ALL-UNNAMED",
            "--add-opens=java.base/java.nio=ALL-UNNAMED",
            "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
            "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
            "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
            "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED",
            "--add-opens=java.base/java.lang=ALL-UNNAMED",
            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
            "--add-opens=java.base/java.io=ALL-UNNAMED",
            "--add-opens=java.base/java.util=ALL-UNNAMED"
    ]
}
